@@ -2,6 +2,11 @@ After CMF 1.5.5
 
   Bug Fixes
 
+    - CMFDefault.DiscussionTool: Ensure that isDiscussionAllowedFor will
+      not accidentally acquire discussion settings from the content
+      object's parent.
+      (http://www.zope.org/Collectors/CMF/398)
+
     - CMFDefault.RegistrationTool: Adding single quotes to the allowed
       characters in the local part of an email address.
       (http://www.zope.org/Collectors/CMF/401)
